<resources>
    <string name="app_name">L Coach</string>
    <string name="navigation_bar_header">home</string>
    <string name="Start_Training">Start Training</string>
    <string name="My_Training">My Training</string>
    <string name="Setting">Setting</string>

    <string name="Team">Team</string>
    <string name="team_work">團隊合作</string>
    <string name="my_teammate">我的隊員</string>
    <string name="my_teammate_description">球員資料、狀態紀錄</string>
    <string name="field">戰術板</string>
    <string name="field_description">沙盤推演、戰術解說</string>

    <string name="Open">Menu</string>
    <string name="Close">Menu</string>
    <string name="Community">Community</string>
    <string name="low">低</string>
    <string name="medium">中</string>
    <string name="high">高</string>
    <string name="training_preview_description">訓練內容</string>
    <string name="filter">篩選器</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="training_condition">訓練條件</string>
    <string name="random">隨機</string>
    <string name="name">姓名</string>
    <string name="role">位置</string>
    <string name="back_number">背號</string>
    <string name="spike">扣球</string>
    <string name="info">備註</string>
    <string name="comfirm_quit">退出訓練將會重置計時器</string>
    <string name="comfirm">確認</string>
    <string name="logout">登出</string>

</resources>
