<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home_nav"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_bar_header"
            />
        <item
            android:id="@+id/Start_Training_nav"
            android:title="@string/Start_Training"
            android:icon="@drawable/ic_directions_run_black_24dp"/>
        <item
            android:id="@+id/My_Training_nav"
            android:title="@string/My_Training"
            android:icon="@drawable/ic_dns_black_24dp"/>
        <item
            android:id="@+id/Community_nav"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            android:title="@string/Community"
            />
        <item
            android:id="@+id/Team_nav"
            android:title="@string/Team"
            android:icon="@drawable/ic_group_black_24dp"/>
        <item
            android:id="@+id/Setting_nav"
            android:title="@string/Setting"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
</menu>

