<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fragment_filter"
    android:layout_marginTop="150dp"
    android:layout_marginBottom="150dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/shape">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/training_condition"
        android:gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:background="@android:color/transparent"
        tools:targetApi="lollipop">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="60dp"
            android:scrollbarSize="30dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_difficulty"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:scrollbarSize="30dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_type"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_other"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:scrollbarSize="30dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_difficulty"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_people"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:scrollbarSize="30dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_other"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/filter_ball"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:scrollbarSize="30dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_people"
            android:layout_marginStart="16dp" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:onClick="cancelFilterFragment"
            android:background="@drawable/shape_white"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="40dp" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_white"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="doneFilterFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>